--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -8,7 +8,7 @@
     tools:content="org.cxct.sportlottery.ui.finance.RechargeLogFragment">
     <View
         android:id="@+id/view"
-        android:background="@color/color_181922_F0F5FA"
+        android:background="@color/color_141414_F3F4F5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -100,9 +100,9 @@
                         <TextView
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_gravity="center"
                             android:layout_weight="1.5"
                             android:gravity="center"
-
                             android:text="@string/record_time"
                             android:textColor="@color/color_BBBBBB_333333"
                             android:textSize="@dimen/textSize12sp"
