--- a/app/src/main/res/layout/item_money_transfer.xml
+++ b/app/src/main/res/layout/item_money_transfer.xml
@@ -16,7 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rootItem"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:background="@color/color_191919_FCFCFC"
         android:orientation="vertical"
         android:onClick="@{() -> clickListener.onClick(data)}"
@@ -30,13 +30,11 @@
             app:autoSizeMaxTextSize="16dp"
             app:autoSizeMinTextSize="2dp"
             app:autoSizeTextType="uniform"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_535D76"
             android:textSize="@dimen/textSize14sp"
             tools:text="AG平台余额"
             android:text="@{data.showName}"
-            android:layout_marginStart="25dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:layout_marginStart="15dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -48,8 +46,9 @@
             android:gravity="end"
             android:maxLines="1"
             app:moneyFormat="@{data.money}"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_A7B2C4"
             android:textSize="@dimen/textSize14sp"
+            android:fontFamily="@font/din_bold"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView2"
@@ -60,10 +59,11 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
-            android:src="@drawable/ic_arrow_right_gray"
-            android:layout_marginHorizontal="20dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:src="@drawable/ic_arrow_gray_right"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="5dp"
             app:layout_constraintHorizontal_bias="1"
             app:layout_constraintStart_toEndOf="@id/tv_balance"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -73,11 +73,12 @@
         <View
             android:id="@+id/divider"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_191919_EEEFF0"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="15dp"
+            android:background="@color/color_eeeeee"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
