--- a/app/src/main/res/layout/item_money_transfer_history.xml
+++ b/app/src/main/res/layout/item_money_transfer_history.xml
@@ -116,7 +116,7 @@
             android:layout_marginLeft="@dimen/margin_15"
             android:layout_marginRight="@dimen/margin_15"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_272F41_E3E8EE" />
+            android:layout_height="0.5dp"
+            android:background="@color/color_E3E8EE" />
     </LinearLayout>
 </layout>
