--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -139,7 +139,6 @@
                 android:id="@+id/block_valid_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_password">
@@ -148,8 +147,9 @@
                     android:id="@+id/et_verification_code"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_marginTop="4dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
                     app:hintText="@string/hint_verification_code"
                     app:iconSignifier="@drawable/ic_valid"
                     app:isResponsiveIconColor="false"
@@ -161,12 +161,12 @@
                         android:id="@+id/eet_verification_code"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:imeOptions="actionNext"
                         android:inputType="number"
-                        android:textColor="@color/color_FFFFFF_DE000000"
-                        android:singleLine="true"
-                        android:ellipsize="end"
                         android:maxLines="1"
+                        android:singleLine="true"
+                        android:textColor="@color/color_FFFFFF_DE000000"
                         android:textSize="@dimen/textSize14sp" />
 
                 </org.cxct.sportlottery.widget.boundsEditText.TextFormFieldBoxes>
@@ -176,26 +176,25 @@
                     android:id="@+id/llCheck"
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:layout_gravity="center_vertical"
                     android:layout_marginStart="10dp"
-                    android:background="@color/transparent"
+                    android:layout_marginTop="17dp"
                     android:gravity="center"
                     android:minWidth="80dp"
                     android:orientation="horizontal">
 
                     <com.makeramen.roundedimageview.RoundedImageView
                         android:id="@+id/ivVerification"
-                        android:layout_width="109dp"
-                        android:layout_height="40dp"
+                        android:layout_width="90dp"
+                        android:layout_height="30dp"
                         android:minHeight="32dp"
                         android:scaleType="fitXY"
                         android:text="@string/get_verification_code"
-                        app:riv_corner_radius="8dp" />
+                        app:riv_corner_radius="4dp" />
 
                     <ImageView
                         android:id="@+id/ivReturn"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
                         android:layout_marginStart="10dp"
                         android:src="@drawable/ic_return" />
 
