--- a/app/src/main/res/layout/fragment_money_transfer_sub.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_sub.xml
@@ -107,6 +107,7 @@
         app:cvTextColor="@color/color_414655"
         app:cvHint="@string/transfer_money_minimum"
         app:cvInputType="number"
+        app:cvBottomLine="false"
         app:layout_constraintTop_toBottomOf="@id/constraint_layout" />
 
 
