--- a/app/src/main/res/drawable/selector_button_radius_5_bet.xml
+++ b/app/src/main/res/drawable/selector_button_radius_5_bet.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/button_radius_8_bet_button" android:state_selected="true" />
-    <item android:drawable="@drawable/button_radius_8_bet_button_disable" android:state_selected="false" />
-    <item android:drawable="@drawable/button_radius_8_bet_button_disable" />
+    <item android:drawable="@drawable/button_radius_8_bet_button" android:state_enabled="true" android:state_selected="true" />
+    <item android:drawable="@drawable/button_radius_8_bet_button" android:state_enabled="true" android:state_selected="false" />
+    <item android:drawable="@drawable/button_radius_8_bet_button_disable" android:state_enabled="false" android:state_selected="true" />
+    <item android:drawable="@drawable/button_radius_8_bet_button_disable" android:state_enabled="false" android:state_selected="false" />
 </selector>
