--- a/app/src/main/res/layout/fragment_money_transfer_sub.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_sub.xml
@@ -118,7 +118,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="14dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/button_radius_8_bet_button"
+        android:enabled="false"
+        android:background="@drawable/selector_button_radius_5_bet"
         android:gravity="center"
         android:maxWidth="100dp"
         android:text="@string/confirm_transform"
