额度转换翻译修复

--- a/app/src/main/res/layout/view_account_balance_2.xml
+++ b/app/src/main/res/layout/view_account_balance_2.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv_balance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/platform_account_money"
