--- a/app/src/main/res/layout/fragment_bank_list.xml
+++ b/app/src/main/res/layout/fragment_bank_list.xml
@@ -17,7 +17,7 @@
         <TextView
             android:id="@+id/tv_money_card_type"
             android:textSize="@dimen/textSize20sp"
-            android:text="@string/my_bank_card"
+            tools:text="@string/my_bank_card"
             android:textColor="@color/color_414655"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -92,7 +92,7 @@
                 <TextView
                     android:id="@+id/tv_add_money_card_type"
                     android:layout_marginLeft="@dimen/dp_4"
-                    android:text="@string/add_credit_or_virtual"
+                    tools:text="@string/add_credit_or_virtual"
                     android:textSize="@dimen/textSize16sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -104,7 +104,7 @@
             android:layout_marginBottom="@dimen/margin_20"
             android:textColor="@color/color_A5A9B3"
             android:layout_marginTop="@dimen/margin_10"
-            android:text="@string/unbound_bank_card"
+            tools:text="@string/unbound_bank_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
