--- a/app/src/main/res/layout/fragment_self_limit_froze.xml
+++ b/app/src/main/res/layout/fragment_self_limit_froze.xml
@@ -134,17 +134,6 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/tvUsTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8"
-        android:layout_marginHorizontal="@dimen/margin_15"
-        android:textColor="@color/color_E44438_e44438"
-        android:textSize="@dimen/textSize14sp"
-        tools:text="@string/text_us_east_time"
-        />
-
-    <TextView
         android:id="@+id/tvError"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -154,6 +143,16 @@
         android:textSize="@dimen/textSize12sp"
         android:layout_marginHorizontal="@dimen/margin_15"
         android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvUsTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_8"
+        android:layout_marginHorizontal="@dimen/margin_15"
+        android:textColor="@color/color_E44438_e44438"
+        android:textSize="@dimen/textSize14sp"
+        tools:text="@string/text_us_east_time" />
 
     <TextView
         android:id="@+id/btnConfirm"
