--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -135,12 +135,12 @@
                 tools:itemCount="2"
                 tools:listitem="@layout/item_match_receipt" />
 
-            <View
-                android:id="@+id/line_shadow"
-                android:layout_width="match_parent"
-                android:layout_height="4dp"
-                android:background="@drawable/bg_gradient_bottom_sheet_shadow"
-                app:layout_constraintBottom_toBottomOf="parent" />
+<!--            <View-->
+<!--                android:id="@+id/line_shadow"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="4dp"-->
+<!--                android:background="@drawable/bg_gradient_bottom_sheet_shadow"-->
+<!--                app:layout_constraintBottom_toBottomOf="parent" />-->
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -229,36 +229,45 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-            android:id="@+id/lin_result_status"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:background="@color/color_202541_FFFFFF"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:paddingHorizontal="15dp"
-            android:gravity="center_vertical"
-            android:visibility="gone"
-            android:background="@color/color_1EB65B">
-
-            <ImageView
-                android:id="@+id/iv_result_status"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:src="@drawable/ic_success_white" />
-
-            <TextView
-                android:id="@+id/tv_result_status"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/lin_result_status"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:textColor="@color/color_2b2b2b_ffffff"
-                android:textSize="16sp"
-                android:text="@string/your_bet_order_success" />
-        </LinearLayout>
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginHorizontal="14dp"
+                android:paddingHorizontal="15dp"
+                android:gravity="center_vertical"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:background="@drawable/drawable_bet_successful">
+
+                <ImageView
+                    android:id="@+id/iv_result_status"
+                    android:layout_width="18dp"
+                    android:layout_height="18dp"
+                    app:tint="@color/color_1EB65B"
+                    android:src="@drawable/ic_success_white" />
+
+                <TextView
+                    android:id="@+id/tv_result_status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
+                    android:textColor="@color/color_1EB65B"
+                    android:textSize="16sp"
+                    android:text="@string/your_bet_order_success" />
+            </LinearLayout>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/margin_14"
-            android:background="@drawable/bg_gradient_bet_total">
+            android:background="@color/color_202541_FFFFFF">
 
             <TextView
                 android:id="@+id/btnLastStep"
