--- a/app/src/main/res/layout/content_game_detail_result_ih_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_ih_rv.xml
@@ -132,7 +132,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                tools:text="0"
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -149,7 +149,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                tools:text="0"
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -166,7 +166,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                tools:text="0"
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -183,7 +183,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                android:text=""
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -200,7 +200,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                android:text=""
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
         </LinearLayout>
@@ -242,7 +242,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                tools:text="0"
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -259,7 +259,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                tools:text="0"
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -276,7 +276,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                tools:text="0"
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -293,7 +293,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                android:text=""
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -310,7 +310,7 @@
                 android:gravity="center"
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
-                android:text=""
+                android:text="-"
                 android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
         </LinearLayout>
