--- a/app/src/main/res/layout/dialog_redenvelope_success.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_success.xml
@@ -8,38 +8,33 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-
-        <ImageView
-            android:id="@+id/iv_shinne"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/shinne" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="60dp">
 
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginVertical="70dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true">
 
             <ImageView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
-                android:src="@drawable/bg_redpocket_success" />
+                android:src="@drawable/bg_redpacket_success" />
 
             <TextView
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/margin_50"
+                android:layout_marginTop="130dp"
                 android:fontFamily="@font/din_regular"
                 android:text="₱ 1,000.000"
-                android:textColor="#D88B53"
-                android:textSize="@dimen/textSize26sp"
+                android:textColor="#E48D00"
+                android:textSize="36sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -47,11 +42,11 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="60dp"
-                android:layout_marginTop="210dp"
+                android:layout_marginTop="60dp"
                 android:text="@string/red_envelope_congratulations"
                 android:textAlignment="center"
-                android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/textSize16sp"
+                android:textColor="#7F3B0C"
+                android:textSize="@dimen/textSize20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -59,12 +54,53 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|bottom"
                 android:layout_marginHorizontal="@dimen/margin_42"
-                android:layout_marginBottom="35dp"
+                android:layout_marginBottom="100dp"
                 android:text="@string/pls_check_amount"
                 android:textAlignment="center"
-                android:textColor="@color/color_FFFFFF"
+                android:textColor="#BA6D38"
                 android:textSize="@dimen/textSize12sp" />
 
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_horizontal|bottom"
+                android:layout_marginBottom="30dp"
+                android:gravity="center"
+                android:background="@drawable/bg_btn_yellow"
+                android:textColor="@color/color_FFFFFF"
+                android:textSize="@dimen/sp_14"
+                android:text="OK" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="@dimen/margin_50"
+                    android:src="@drawable/ic_pop_chest" />
+            </RelativeLayout>
+        </FrameLayout>
+
+        <FrameLayout
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:id="@+id/iv_shinne"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_circular" />
+
+            <ImageView
+                android:id="@+id/iv_gold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_gold" />
         </FrameLayout>
 
 
@@ -76,5 +112,6 @@
         android:layout_width="@dimen/margin_40"
         android:layout_height="@dimen/margin_40"
         android:layout_marginTop="-40dp"
+        android:visibility="gone"
         android:src="@drawable/ic_close_gray_bg" />
 </LinearLayout>
