--- a/app/src/main/res/layout/fragment_red_envelope_receive.xml
+++ b/app/src/main/res/layout/fragment_red_envelope_receive.xml
@@ -14,10 +14,20 @@
 
     </RelativeLayout>
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_redpacket_top" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/iv_radiance"
@@ -44,9 +54,19 @@
         android:layout_height="26dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/red_envelope_close" />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
+        android:src="@drawable/bg_chest" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
