--- a/app/src/main/res/layout/motion_view_red_envelope_floating.xml
+++ b/app/src/main/res/layout/motion_view_red_envelope_floating.xml
@@ -17,35 +17,48 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/iv_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="-8dp"
-                android:layout_marginRight="@dimen/margin_5"
-                android:layout_toRightOf="@+id/rl_red_envelope"
-                android:src="@drawable/float_btn_close" />
-
             <RelativeLayout
                 android:id="@+id/rl_red_envelope"
                 android:layout_width="@dimen/margin_68"
-                android:layout_height="63dp"
+                android:layout_height="60dp"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/float_window">
 
-
-                <TextView
-                    android:id="@+id/tv_countdown"
+                <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="2dp"
-                    android:text="60"
-                    android:textColor="@color/color_FA0200"
-                    android:textSize="16sp" />
+                    android:layout_centerHorizontal="true">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/float_bg_shijian" />
+
+                    <TextView
+                        android:id="@+id/tv_countdown"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="3dp"
+                        android:layout_gravity="center_horizontal"
+                        android:text="60"
+                        android:textColor="@color/color_FA0200"
+                        android:textSize="10sp" />
+                </FrameLayout>
+
 
             </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/iv_close"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
+                android:layout_marginLeft="-8dp"
+                android:layout_marginRight="@dimen/margin_10"
+                android:layout_toRightOf="@+id/rl_red_envelope"
+                android:src="@drawable/float_btn_close" />
         </RelativeLayout>
     </org.cxct.sportlottery.ui.common.MovableAdsorptionLinearLayout>
 
